# Erkao

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  erkao.mod
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
bench/: 01_arithmetic.ek  02_arrays.ek  03_maps.ek  04_strings.ek  baseline.json  bench_utils.ek
docs/: architecture_contract.json  architecture_violations.json  code_size_baseline.txt  compiler_pipeline.md  cookbook.md  db.md  ownership.md  refactor_baseline.md  review_checklist.md  static_analysis_baseline.txt
docs/adr/: 0001-layered-architecture-contract.md
docs/design-notes/: 20260205-runtime-hardening.md  README.md
examples/: classes.ek  enum_match.ek  ergonomics.ek  error_handling.ek  exports.ek  features.ek  graphics_demo.ek  hello.ek  import_demo.ek  imported.ek  packages_semver.ek  platformer.ek  stdlib_demo.ek  stdlib_extras.ek  ui.ek  web_api.ek
examples/plugins/: hello_plugin.c  hello_plugin.ek
examples/routes/: api.ek  main.ek
fuzz/: fuzz_http.c  fuzz_import.c  fuzz_lexer.c  fuzz_parser.c  fuzz_runtime.c
include/: erkao_plugin.h
scripts/: check-architecture.py  check-bench.py  check-code-size.py  check-critical-coverage.py  check-design-note.py  check-static-analysis.py  erkao.ps1  format.ps1  format.sh  install-sdl2.ps1  install-sdl2.sh  lint.ps1  lint.sh  resolve-erkao.ps1  resolve-erkao.sh  run-bench.ps1  run-bench.sh  run-gc-stress.ps1  run-gc-stress.sh  run-tests.ps1  run-tests.sh  update-tests.ps1  update-tests.sh
scripts/unix/: format.sh  install-sdl2.sh  lint.sh  run-bench.sh  run-gc-stress.sh  run-tests.sh  setup.sh  update-tests.sh
scripts/windows/: erkao.ps1  format.ps1  install-sdl2.ps1  lint.ps1  run-bench.ps1  run-gc-stress.ps1  run-tests.ps1  update-tests.ps1
src/: ast.c  ast.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  db.c  db.h  db_mysql.c  disasm.c  disasm.h  erkao_stdlib.h  eval.c  exec.c  gc.c  gc.h  gc_core.c  gc_internal.h  gc_sweep.c  gc_trace.c  gc_young.c  graphics.c  graphics.h  imports.c  interpreter.c  interpreter.h  interpreter_internal.h  lexer.c  lexer.h  main.c  package.c  package.h  parser.c  parser.h  parser_core.c  parser_expr.c  parser_internal.h  parser_stmt.c  plugin.c  (+16 more)
src/bytecode/: chunk.c  compiler_pipeline.c  pipeline_lower.c  pipeline_lower.h  program.c  program.h  singlepass.h  singlepass_internal.h  singlepass_legacy.h
src/cli/: main.c
src/common/: common.h
src/db/: db_mongo.c  db_postgres.c
src/diagnostics/: diagnostics.h
src/frontend/: lexer.c  lexer.h  pipeline_frontend.c  pipeline_frontend.h  singlepass_parse.c  singlepass_patterns.c
src/gc/: gc_core.c  gc_internal.h  gc_young.c
src/graphics/: graphics.c
src/platform/: platform.c  platform.h
src/runtime/: eval.c  exec.c  imports.c  interpreter.h  interpreter_internal.h  runtime.c  value.c  vm.c
src/stdlib/: http_internal.c  http_internal.h  stdlib_array.c  stdlib_core.c  stdlib_di.c  stdlib_env.c  stdlib_ffi.c  stdlib_fs.c  stdlib_http.c  stdlib_internal.c  stdlib_internal.h  stdlib_json.c  stdlib_math.c  stdlib_os.c  stdlib_path.c  stdlib_plugin.c  stdlib_proc.c  stdlib_random.c  stdlib_registry.c  stdlib_str.c  stdlib_time.c  stdlib_vec.c  stdlib_yaml.c
src/tooling/: package.c  tooling.c
src/typecheck/: pipeline_sema.c  pipeline_sema.h
tests/: 01_basic.ek  01_basic.out  02_import.ek  02_import.out  03_stdlib.ek  03_stdlib.out  04_class.ek  04_class.out  05_array_map.ek  05_array_map.out  06_parse_error.ek  06_parse_error.out  07_runtime_error.ek  07_runtime_error.out  08_import_missing.ek  08_import_missing.out  09_import_nonstring.out  10_stdlib_fs.ek  10_stdlib_fs.out  11_time.ek  12_language_ergonomics.ek  12_language_ergonomics.out  13_stdlib_modules.ek  13_stdlib_modules.out  14_packages.ek  14_packages.out  15_http.ek  15_http.out  16_gc.ek  16_gc.out  17_new_features.ek  17_new_features.out  18_stdlib_extras.ek  18_stdlib_extras.out  19_modules_v2.ek  19_modules_v2.out  20_stdlib_more.ek  20_stdlib_more.out  21_typecheck.ek  21_typecheck.out  (+90 more)
tests/modules/: ergonomics.ek  exported.ek  imported.ek  private_auto.ek  v2_cycle_a.ek  v2_cycle_b.ek  v2_default_fun.ek  v2_default_value.ek  v2_named.ek  v2_reexport.ek
tests/stress/: gc_deep.ek
vscode/erkao-syntax/: extension.js  package-lock.json  package.json  server.js
vscode/erkao-syntax/syntaxes/: erkao.tmLanguage.json
